--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.6.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^4.7.1",
     "react-redux": "^8.0.5",
