--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.2.9",
     "jquery": "^3.6.3",
     "moment": "^2.29.4",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
@@ -23,7 +24,6 @@
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "sass": "^1.58.0",
     "swiper": "^9.0.5",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
