commit 0.1.0 added changes for add-fund flow, notification implementation 27-Mar-2023

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,13 +9,8 @@
     },
     {
       "src": "favicon.ico",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "favicon.ico",
-      "type": "image/png",
-      "sizes": "512x512"
+      "type": "image/x-icon",
+      "sizes": "48x48"
     }
   ],
   "start_url": ".",
