--- a/package.json
+++ b/package.json
@@ -5,28 +5,28 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "axios": "^1.3.0",
     "bootstrap": "^5.3.0-alpha1",
     "card-validator": "^8.1.1",
     "formik": "^2.2.9",
     "jquery": "^3.6.3",
     "moment": "^2.29.4",
-    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "sass": "^1.60.0",
     "swiper": "^9.0.5",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "web-vitals": "^3.3.1",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
