--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^4.7.1",
+    "react-popper-tooltip": "^4.4.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
