--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.60.0",
     "swiper": "^9.0.5",
+    "swr": "^2.1.5",
     "web-vitals": "^3.3.1",
     "yup": "^1.0.2"
   },
