--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^4.7.1",
+    "react-number-format": "^5.2.2",
     "react-popper-tooltip": "^4.4.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
@@ -29,7 +30,6 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.60.0",
     "swiper": "^9.0.5",
-    "swr": "^2.1.5",
     "web-vitals": "^3.3.1",
     "yup": "^1.0.2"
   },
