--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.0-alpha1",
     "card-validator": "^8.1.1",
     "formik": "^2.2.9",
+    "history": "^5.3.0",
     "jquery": "^3.6.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
