--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.3.0",
     "bootstrap": "^5.3.0-alpha1",
     "card-validator": "^8.1.1",
+    "clipboard-copy": "^4.0.1",
     "formik": "^2.2.9",
     "history": "^5.3.0",
     "jquery": "^3.6.3",
@@ -25,6 +26,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
+    "react-share": "^4.4.1",
     "react-time-picker": "^6.0.4",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
