--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,8 +4,9 @@ definitions:
   steps:
     - step: &build-step
         name: SonarQube analysis
+        size: 2x
         script:
-          - pipe: sonarsource/sonarqube-scan:1.0.0
+          - pipe: sonarsource/sonarqube-scan:1.1.0
             variables:
               SONAR_HOST_URL: ${SONAR_HOST_URL} # Get the value from the repository/workspace variable.
               SONAR_TOKEN: ${SONAR_TOKEN} # Get the value from the repository/workspace variable. You shouldn't set secret in clear text here.
