CX Pay to CX PayMe label changed.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "CX Pay App",
-  "short_name": "CX Pay App",
+  "name": "CX PayMe App",
+  "short_name": "CX PayMe App",
   "icons": [
     {
       "src": "favicon-16x16.png",
